<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email_label"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="24dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="56dp" />

</LinearLayout>