<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:fillViewport="true"
    android:padding="@dimen/padding_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="@dimen/padding_large"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_thousand_courses"
                android:textColor="@color/on_surface_white"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_title"
                android:textColor="@color/on_surface_white"
                android:textSize="@dimen/text_size_button"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:hint="@string/email_hint"
            app:boxStrokeColor="@color/on_surface_grey"
            app:hintTextColor="@color/on_surface_grey"
            app:placeholderTextColor="@color/on_surface_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/on_surface_white"
                android:textSize="@dimen/text_size_category" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_title"
                android:textColor="@color/on_surface_white"
                android:textSize="@dimen/text_size_button"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:hint="@string/password_hint"
            app:boxStrokeColor="@color/on_surface_grey"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/on_surface_grey"
            app:placeholderTextColor="@color/on_surface_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/on_surface_white"
                android:textSize="@dimen/text_size_category" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_medium"
            android:paddingVertical="0dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            app:backgroundTint="@color/accent_green_dark"
            app:cornerRadius="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/accent_green"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/accent_green"
            android:textSize="14sp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivVk"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:src="@drawable/button_vk"
                android:padding="8dp"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/ivOk"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/button_ok" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>